Fix tile square spacing

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -116,8 +116,9 @@ main {
 .tray-square {
     background-color: #aaa;
     display: inline-block;
-    width: 34px;
-    height: 34px;
+    margin: 0 1px;
+    width: 30px;
+    height: 30px;
     border: 1px;
     border-color: none;
     border-collapse: collapse;
